
2008-03-?? version 3.0.0

2007-04-22 version 2.1.0

2006-12-18 version 2.0.0
 
2003-03-07 version 1.2.2
 
2002-07-07 version 1.2.0

2002-04-11 version 1.1.0

2002-01-28 Project hosted on SourceForge / version 1.0.0

2001-03-24 Documentation was regenerated using Doxygen 1.2.6

2000-06-14 Creation of xlw.ifrance.com. First public version of the tool.
