@@ -1,9 +1,9 @@
 <!--#include virtual="header.inc"-->
-<h2>xlw - A C++ Wrapper for Excel</h2>
+<h2>XLW - A C++ Wrapper for Excel</h2>
 <div id="download"><a class="imglink" id="imghover" href="http://downloads.sourceforge.net/xlw/xlw-3.0.0.exe"><img src="images/download.jpg" border=0/></a></div>
-<p>xlw is a C++ wrapper for Excel, implementing a simple API which you can use to write your own worksheet formulas and menu items.</p>
+<p>XLW implements a simple API which you can use to customize Excel with your own worksheet formulas and menu items.</p>
 <br>
-<p>The project includes the InterfaceGenerator utility which parses the header files of your C++ application and automatically generates the corresponding Excel addin.</p>
+<p>The project includes the InterfaceGenerator utility which parses the header files of your C++ application and automatically generates the corresponding XLW Excel addin.</p>
 <br>
-<p>xlw supports new features introduced by Excel 2007 such as multithreading, larger spreadsheets, and Unicode strings.</p>
+<p>XLW supports new features introduced by Excel 2007 such as multithreading, larger spreadsheets, and Unicode strings.</p>
 <!--#include virtual="footer.inc"-->
