@@ -2,7 +2,7 @@
 DOXY_FILE = xlw.linux.doxy
 HTML_FILES := $(wildcard *.html)
 HTML_DIR=html
-IMAGES=html/sfnetlogo.png html/logo_small.jpg
+IMAGES=html/sflogo.png html/logo_small.jpg
 PAGES := $(wildcard pages/*.txt)
 SOURCES := $(wildcard ../src/*.cpp)
 HEADERS := $(wildcard ../include/xlw/*.h)
@@ -15,8 +15,9 @@ $(HTML_DIR) :
 	mkdir html
 
 $(IMAGES) :
-	cp -f images/sfnetlogo.png html/sfnetlogo.png
+	cp -f images/sflogo.png html/sflogo.png
 	cp -f images/logo_small.jpg html/logo_small.jpg
+	cp -f images/nazcatech.jpg html/nazcatech.jpg
 
 refman : $(DOXY_FILE) $(HTML_FILES) $(HTML_DIR) $(IMAGES) $(INPUTS)
 	doxygen $(DOXY_FILE)
