@@ -1,35 +1,33 @@
 
 /*!
-\mainpage XLW (Excel32 C++ Wrapper)
+\mainpage XLW - A C++ Wrapper for Excel
 
-\author <a href=mailto:xlw@ifrance.com>J&eacute;r&ocirc;me Lecomte</a>
-\author Mark Joshi
-\author Eric Ehlers
+\b Authors: J&eacute;r&ocirc;me Lecomte, Mark Joshi, Eric Ehlers
 
-Have you ever programmed an algorithm in C or C++ you needed to test on a large
-number of values? Did you ever want to quickly calibrate the arguments of your
-estimation? Did you ever wish you could graph your output in no time and
-integrate your work in a word document with even less effort?  If you do (or
-did), you might be interested in the XLW package.
+\b Contributors: Ferdinando Ametrano, Luigi Ballabio, Jos&eacute; Fonseca
 
-The XLW package wraps the C API described in \ref XLSDK97 in a few classes that
-make API programming with Excel much, much simpler.  This simple (a few lines
-of code as demonstrated in the \ref gettingstarted section), yet powerful
-interface empowers your C or C++ numerics by embeding them in Excel (just like
-the built in functions); and lets you benefit from its powerful functionality,
-including graphs, solvers, and integration with the rest of the Microsoft
-office suite.  These classes are thoroughly documented and \ref download
-"downloadable" free of charge as long as you retain the \ref copyright
-"copyright notice".
+Have you ever programmed in C or C++ an algorithm that you needed to test on a
+large number of values?  Have you ever wanted to quickly calibrate the
+arguments of your estimation?  Have you ever wished that you could easily
+graph your results and integrate the output into a word processing document?
+If so, you might be interested in the XLW package.
 
-The XLW development is hosted on SourceForge at
-http://xlw.sourceforge.net/
-Early versions of this package have been used for years and tested under
-Windows 9X/NT with Visual C++ 6.0 and Excel 97 \ref sr1 "SR-1 & SR-2" with
-minor problems (see \ref knownbugs) The package is not perfect but certainly
-has reached a stage where it can be useful. If you have any comment, you can
-email to xlw-users@lists.sourceforge.net Suggestions, improvements and
-criticisms of the software and/or documentation are welcome.
+XLW wraps the C API described in \ref XLSDK97 in a few classes that make API
+programming with Excel much, much easier.  This powerful yet simple (a few
+lines of code as demonstrated in the \ref gettingstarted section) interface
+empowers your C or C++ numerics by embeding them in Excel just like the built
+in functions, and lets you exploit Excel features such as graphs, solvers, and
+integration with the rest of the Microsoft Office suite.  The package includes
+documentation and examples and is \ref download "downloadable" free of charge
+provided that you retain the \ref copyright "copyright notice".
+
+The XLW project is hosted on SourceForge at
+<a href="http://xlw.sourceforge.net/">http://xlw.sourceforge.net/</a>.
+XLW is a mature and stable package which has been tested and used over many
+years in a wide variety of configurations.  The library is not perfect but has
+certainly established its usefulness.  If you have any comments, you can email
+xlw-users@lists.sourceforge.net.  Suggestions, improvements and criticisms of
+the software and documentation are always welcome.
 
 \htmlonly
 If you are interested in knowing more about the C++ wrapper, you can browse
