@@ -18,14 +18,23 @@
 <td align="middle" width="33%">
 <strong>Hosted by</strong><br>
 <a href="http://sourceforge.net">
-<img src="sfnetlogo.png" width="88" height="31" border="0" alt="SourceForge.net Logo"></a>
+<img src="sflogo.png" width="88" height="31" border="0" alt="SourceForge.net Logo"></a>
 </td>
 <td align="middle" width="33%">
+<!--
 <strong>Documentation generated by</strong><br>
 <a href="http://www.stack.nl/~dimitri/doxygen/index.html">
-<img src="doxygen.png" alt="doxygen" align="middle" border=0 width=100 height=45>
-</a></td>
+<img src="doxygen.png" alt="doxygen" align="middle" border=0 width=100 height=45></a>
+-->
+<a href="http://www.nazcatech.be">
+<img src="nazcatech.jpg" width="88" height="98" border="0" alt="nazcatech logo"></a>
+</td>
 </tr>
 </table>
+
+<center><small>SourceForge logo copyright &#169; Open Source Technology Group</small></center>
+<center><small>Nazcatech logo <a href="http://www.nazcatech.be">copyright &#169; 2004, 2005, 2006, 2007 2008 Nazcatech sprl</a></small></center>
+<center><small>all other content <a href="copyright.html">copyright &#169; 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008 xlw project</a></small></center>
+
 </body>
 </html>
